fix: font sizes and spacing on mobile

--- a/src/components/Hero/styles.scss
+++ b/src/components/Hero/styles.scss
@@ -33,7 +33,7 @@
         padding-top: 20px;
 
         @include mobile {
-          font-size: 12px;
+          font-size: 18px;
         }
       }
 
@@ -55,7 +55,7 @@
 
         @include mobile {
           font-size: 18px;
-          display: none;
+          // display: none;
         }
       }
 
